// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes : messages DELETE /messages/:id deletes message by id 1`] = `
Object {
  "message": Object {
    "authorId": 1,
    "channelId": 1,
    "content": "this is the first message!",
    "created_at": "2020-10-12T06:00:00.000Z",
    "id": 1,
    "updated_at": "2020-10-12T06:00:00.000Z",
  },
  "status": "success",
}
`;

exports[`routes : messages GET /messages returns all messages 1`] = `
Object {
  "messages": Array [
    Object {
      "authorId": 1,
      "channelId": 1,
      "content": "this is the first message!",
      "created_at": "2020-10-12T06:00:00.000Z",
      "id": 1,
      "updated_at": "2020-10-12T06:00:00.000Z",
    },
    Object {
      "authorId": 2,
      "channelId": 1,
      "content": "this is the second message!",
      "created_at": "2020-10-12T06:00:00.000Z",
      "id": 2,
      "updated_at": "2020-10-12T06:00:00.000Z",
    },
  ],
  "status": "success",
}
`;

exports[`routes : messages GET /messages/:id returns message by id 1`] = `
Object {
  "message": Object {
    "authorId": 1,
    "channelId": 1,
    "content": "this is the first message!",
    "created_at": "2020-10-12T06:00:00.000Z",
    "id": 1,
    "updated_at": "2020-10-12T06:00:00.000Z",
  },
  "status": "success",
}
`;

exports[`routes : messages POST /messages creates new message 1`] = `
Object {
  "message": Object {
    "authorId": 1,
    "channelId": 1,
    "content": "new created message!",
    "created_at": Any<String>,
    "id": 3,
    "updated_at": Any<String>,
  },
  "status": "success",
}
`;

exports[`routes : messages PUT /messages/:id updates message by id 1`] = `
Object {
  "message": Object {
    "authorId": 1,
    "channelId": 1,
    "content": "updated message",
    "created_at": "2020-10-12T06:00:00.000Z",
    "id": 1,
    "updated_at": "2020-10-12T06:00:00.000Z",
  },
  "status": "success",
}
`;
